chore(infra): simplify compose stack and align env vars